# coordinates_serial_generator

./: README.md  pyproject.toml  run.spec
.github/workflows/: python-app-windows-linux.yml  python-app-windows.yml
app/: main.py
