[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinates_serial_generator"
dynamic = ["version"]
requires-python = ">= 3.12"
readme = "README.md"
authors = [
  {name = "Richard", email = "1625351+richardzone@users.noreply.github.com"}]
dependencies = ["pyserial>=3.5"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
generator = "app.main:main"

[project.optional-dependencies]
# Optional dependencies, can be installed via "your_project_name[testing]"
testing = [
    "pyinstaller>=6.6.0"
]

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]
