[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinates_serial_generator"
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.md"
authors = [
  {name = "Richard", email = "1625351+richardzone@users.noreply.github.com"}]
dependencies = ["pyserial>=3.5"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
generator = "app.main:main"

[project.optional-dependencies]
# Optional dependencies, can be installed via "your_project_name[development]"
development = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "Babel>=2.15.0",
    "pyinstaller>=6.6.0",
    "flake8>=7.0.0"
]

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]
